# claude-keiba

./: .gitignore  pyproject.toml  run.py
agents/prompts/: betting.md  bloodline.md  jockey.md  judge.md  lap.md  monitor.md  past_races.md  secretary.md  training.md  x_opinion.md
data/: bms_stats.toon  nicks.toon  sire_lines.json  sire_lines.toon  sire_stats.toon
data/api/: balance.py  bet.py  generate_sire_lines.py  generate_sire_stats.py  horse_detail.py  jockey_stats.py  kbdb_client.py  odds.py  past_results.py  prefetch.py  race_info.py  race_laps.py  sire_stats_filter.py  trainer_stats.py  training.py  x_search.py
data/bloodline/: bms_stats.toon  sire_stats.toon
docs/plans/: 2026-02-27-agent-keiba-design.md  2026-02-27-agent-keiba-implementation.md  2026-03-06-backtest-balance-design.md  2026-03-06-race-scheduler-design.md  2026-03-06-race-scheduler-implementation.md  2026-03-06-x-post-design.md  2026-03-06-x-post-implementation.md
scripts/: backtest.py  schedule_races.py  start_chrome_debug.sh  test_chrome_mcp.py  test_e2e.py  test_single_agent.py
src/: logging.py  models.py  orchestrator.py
src/agents/: council.py  runner.py
src/betting/: executor.py  kelly.py
src/notifiers/: card_image.py  x_poster.py
tests/: test_betting.py  test_card_image.py  test_council.py  test_data_api.py  test_e2e_smoke.py  test_logging.py  test_models.py  test_runner.py  test_schedule_races.py  test_x_poster.py
