[project]
name = "claude-keiba"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "python-toon>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
